# Ray-Tracer

./: CMakeLists.txt
src/: mathUtil.h  scene.h
